ecmascript/parser/tests/test262-error-references/fail/c7023e867afea771.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/c7023e867afea771.js:3:1
  |
3 | ]
  | ^

